--- a/user_frontend/public/1.html
+++ b/user_frontend/public/1.html
@@ -3,4 +3,19 @@
 <html>
 <head><title>Success</title></head>
 <body><h1>✅ Bottle is valid!</h1></body>
+    <img id="certificate-img" />
+
+    <script>
+      async function displayBlobImage() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const manu = urlParams.get("manu");
+        console.log("manu :", manu);
+        const response = await fetch(`http://192.168.1.22:8000/certificates/${manu}/latest`);
+        const blob = await response.blob();
+        const imageURL = URL.createObjectURL(blob); // 👈 convert blob to object URL
+        document.getElementById("certificate-img").src = imageURL; // 👈 set src of <img>
+      }
+
+      displayBlobImage();
+    </script>
 </html>
